...
        window.rootViewController = SplashViewController()
    }
    
    func showAlertExit() {
        DispatchQueue.main.async {
            let alert = AlertModel(
                title: "Пока, пока!",
                message: "Уверены, что хотите выйти?",
                buttonText: "Да",
                completion: { [weak self] in
                    guard let self = self else { return }
                    self.exitProfile()
                },
                nextButtonText: "Нет",
                nextCompletion: { [weak self] in
...
